# mars_core

./: .gitignore  CMakeLists.txt  README.md  jm.patch  manifest.xml  refactor_handle_contacts.patch  setframe.patch
src/: AbsolutePoseExtender.cpp  AbsolutePoseExtender.hpp  CollisionManager.cpp  CollisionManager.hpp  FrameIDManager.hpp  JointIDManager.hpp  JointManager.cpp  JointManager.hpp  MotorManager.cpp  MotorManager.hpp  NodeManager.cpp  NodeManager.hpp  PID.cpp  PID.h  PID.hpp  SensorManager.cpp  SensorManager.hpp  SimJoint.cpp  SimJoint.hpp  SimMotor.cpp  SimMotor.hpp  SimNode.cpp  SimNode.hpp  Simulator.cpp  Simulator.hpp  SubWorld.cpp  SubWorld.hpp
src/registration/: AbsolutePoseRegister.cpp  CollisionInterfaceItemRegister.cpp  DynamicObjectItemRegister.cpp  JointInterfaceItemRegister.cpp  PhysicsInterfaceItemRegister.cpp
src/sensors/: CameraSensor.cpp  CameraSensor.hpp  Joint6DOFSensor.cpp  Joint6DOFSensor.hpp  RaySensor.cpp  RaySensor.hpp  RotatingRaySensor.cpp  RotatingRaySensor.hpp
